--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h1>My SoftUni Certificates</h1>
     <div class="container">
         <a href="certificates/certificate1.png" target="_blank">
-            <img src="certificates/certificate1.png" class="certificate" alt="Certificate 1">
+            <img src="asp-advance.png" class="certificate" alt="Certificate 1">
         </a>
         <a href="certificates/certificate2.png" target="_blank">
             <img src="certificates/certificate2.png" class="certificate" alt="Certificate 2">
