--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             margin: 20px;
         }
         .certificate {
-            width: 300px;
+            width: 400px;
             height: auto;
             cursor: pointer;
         }
@@ -32,10 +32,9 @@
         <a href="certificates/certificate1.png" target="_blank">
             <img src="/picC/Screenshot 2024-10-09 184419.png" class="certificate" alt="Certificate 1.2">
         </a>
-        <a href="certificates/certificate2.png" target="_blank">
-            <img src="certificates/certificate2.png" class="certificate" alt="Certificate 2">
+        <a href="https://softuni.bg/certificates/certificates/converttopdf/206924?code=148290c0&fileName=ASP.NET%20Fundamentals%20-%20January%202024%20-%20Certificate" target="_blank">
+            <img src="/picC/Screenshot 2024-10-09 193036.png" class="certificate" alt="Certificate 2">
         </a>
-        <!-- Добавете още сертификати по същия начин -->
     </div>
 </body>
 </html>
