--- a/index.html
+++ b/index.html
@@ -4,30 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My SoftUni Certificates</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-        }
-        .container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 20px;
-            margin: 20px;
-        }
-        .certificate {
-            width: 400px;
-            height: auto;
-            cursor: pointer;
-        }
-        .certificate:hover {
-            opacity: 0.8;
-        }
-    </style>
+    <link rel="stylesheet" href="css.css">
 </head>
 <body>
     <h1>My SoftUni Certificates</h1>
+    <div class="container">
+        <a href="certificates/certificate1.png" target="_blank">
+            <img src="/picC/Screenshot 2024-10-09 184419.png" class="certificate" alt="Certificate 1.2">
+        </a>
+        <a href="https://softuni.bg/certificates/certificates/converttopdf/206924?code=148290c0&fileName=ASP.NET%20Fundamentals%20-%20January%202024%20-%20Certificate" target="_blank">
+            <img src="/picC/Screenshot 2024-10-09 193036.png" class="certificate" alt="Certificate 2">
+        </a>
+    </div>
     <div class="container">
         <a href="certificates/certificate1.png" target="_blank">
             <img src="/picC/Screenshot 2024-10-09 184419.png" class="certificate" alt="Certificate 1.2">
