--- a/index.html
+++ b/index.html
@@ -9,19 +9,35 @@
 <body>
     <h1>My SoftUni Certificates</h1>
     <div class="container">
-        <a href="certificates/certificate1.png" target="_blank">
-            <img src="/picC/Screenshot 2024-10-09 184419.png" class="certificate" alt="Certificate 1.2">
+        <a href="https://softuni.bg/certificates/certificates/converttopdf/166901?code=a1129ab4&fileName=Programming%20Fundamentals%20with%20C%23%20-%20January%202023%20-%20Certificate" target="_blank">
+            <img src="/picC/Fundamentals.png" class="certificate" alt="Certificate 1.2">
         </a>
-        <a href="https://softuni.bg/certificates/certificates/converttopdf/206924?code=148290c0&fileName=ASP.NET%20Fundamentals%20-%20January%202024%20-%20Certificate" target="_blank">
-            <img src="/picC/Screenshot 2024-10-09 193036.png" class="certificate" alt="Certificate 2">
+        <a href="https://softuni.bg/certificates/certificates/converttopdf/173663?code=6bccb3aa&fileName=C%23%20Advanced%20-%20May%202023%20-%20Certificate" target="_blank">
+            <img src="/picC/Advanced.png" class="certificate" alt="Certificate 2">
         </a>
     </div>
     <div class="container">
-        <a href="certificates/certificate1.png" target="_blank">
-            <img src="/picC/Screenshot 2024-10-09 184419.png" class="certificate" alt="Certificate 1.2">
+        <a href="https://softuni.bg/certificates/certificates/converttopdf/181153?code=66a5e2d3&fileName=C%23%20OOP%20-%20June%202023%20-%20Certificate" target="_blank">
+            <img src="/picC/OOP.png" class="certificate" alt="Certificate 1.2">
         </a>
+        <a href="https://softuni.bg/certificates/certificates/converttopdf/185848?code=fc858fe5&fileName=MS%20SQL%20-%20September%202023%20-%20Certificate" target="_blank">
+            <img src="/picC/MSSQL.png" class="certificate" alt="Certificate 1.2">
+        </a>
+    </div>
+    <<div class="container">
+        <a href="https://softuni.bg/certificates/certificates/converttopdf/218547?code=cb42fb85&fileName=HTML%20%26%20CSS%20-%20May%202024%20-%20Certificate" target="_blank">
+            <img src="/picC/HTML&CSS.png" class="certificate" alt="Certificate 1.2">
+        </a>
+        <a href="https://softuni.bg/certificates/certificates/converttopdf/223952?code=fa81b29b&fileName=JS%20Front-End%20-%20June%202024%20-%20Certificate" target="_blank">
+            <img src="/picC/JSFront-End.png" class="certificate" alt="Certificate 2">
+        </a>
+    </div>
+    <div class="container">
         <a href="https://softuni.bg/certificates/certificates/converttopdf/206924?code=148290c0&fileName=ASP.NET%20Fundamentals%20-%20January%202024%20-%20Certificate" target="_blank">
-            <img src="/picC/Screenshot 2024-10-09 193036.png" class="certificate" alt="Certificate 2">
+            <img src="/picC/Screenshot 2024-10-09 193036.png" class="certificate" alt="Certificate 1.2">
+        </a>
+        <a href="https://softuni.bg/certificates/certificates/converttopdf/214296?code=06c288ae&fileName=ASP.NET%20Advanced%20-%20February%202024%20-%20Certificate" target="_blank">
+            <img src="/picC/Screenshot 2024-10-09 184419.png" class="certificate" alt="Certificate 2">
         </a>
     </div>
 </body>
