--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <img src="/picC/MSSQL.png" class="certificate" alt="Certificate 1.2">
         </a>
     </div>
-    <<div class="container">
+    <div class="container">
         <a href="https://softuni.bg/certificates/certificates/converttopdf/218547?code=cb42fb85&fileName=HTML%20%26%20CSS%20-%20May%202024%20-%20Certificate" target="_blank">
             <img src="/picC/HTML&CSS.png" class="certificate" alt="Certificate 1.2">
         </a>
