--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <h1>My SoftUni Certificates</h1>
     <div class="container">
-        <a href="https://softuni.bg/certificates/certificates/converttopdf/166901?code=a1129ab4&fileName=Programming%20Fundamentals%20with%20C%23%20-%20January%202023%20-%20Certificate" target="_blank">
+        <a href="https://softuni.bg/certificates/certificates/converttopdf/166901?code=a1129ab4&fileName=Programming%20Fundamentals%20with%20C%23%20-%20January%202023%20-%20Certificate" download="">
             <img src="/picC/Fundamentals.png" class="certificate" alt="Certificate 1.2">
         </a>
-        <a href="https://softuni.bg/certificates/certificates/converttopdf/173663?code=6bccb3aa&fileName=C%23%20Advanced%20-%20May%202023%20-%20Certificate" target="_blank">
+        <a href="/pdfC/C%23%20Advanced%20-%20May%202023%20-%20Certificate%20(2).pdf" download>
             <img src="/picC/Advanced.png" class="certificate" alt="Certificate 2">
         </a>
     </div>
