Update pdf name

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="/pdfC/Programming Basics - October 2022 - Certificate.pdf" download>
             <img src="/picC/Screenshot 2024-10-10 190641.png" class="certificate" alt="Certificate 1.2">
         </a>
-        <a href="/pdfC/Programming Fundamentals with C# - January 2023 - Certificate.pdf" download>
+        <a href="/pdfC/Fundamentals.pdf" download>
             <img src="/picC/Fundamentals.png" class="certificate" alt="Certificate 1.2">
         </a>
     </div>
@@ -20,7 +20,7 @@
         <a href="/pdfC/C%23%20Advanced%20-%20May%202023%20-%20Certificate%20(2).pdf" download>
             <img src="/picC/Advanced.png" class="certificate" alt="Certificate 2">
         </a>
-        <a href="/pdfC/C# OOP - June 2023 - Certificate.pdf" download>
+        <a href="/pdfC/OOP.pdf" download>
             <img src="/picC/OOP.png" class="certificate" alt="Certificate 1.2">
         </a>
     </div>
