--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css.css">
 </head>
 <body>
-    <h1>My SoftUni Certificates</h1>
+    <h1>My SoftUni Certificates.</h1>
     <div class="container">
         <a href="/pdfC/Programming Basics - October 2022 - Certificate.pdf" download>
             <img src="/picC/Screenshot 2024-10-10 190641.png" class="certificate" alt="Certificate 1.2">
