--- a/index.html
+++ b/index.html
@@ -48,5 +48,10 @@
             <img src="/picC/Screenshot 2024-10-09 184419.png" class="certificate" alt="Certificate 2">
         </a>
     </div>
+    <div class="container">
+        <a href="/pdfC/Software Engineering and DevOps - September 2024 - Certificate.pdf" download>
+            <img src="/picC/SoftwareEngineering.png" class="certificate" alt="Certificate 1.2">
+        </a>
+    </div>
 </body>
 </html>
