--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <body>
     <h1>My SoftUni Certificates.</h1>
     <div class="container">
+        <a href="/pdfC/Diploma for Back-End Software Engineer with C#.pdf" download>
+            <img src="/picC/Back-end Software engineer with C#.png/" class="certificate" alt="Certificate 1.2">
+        </a>
+    </div>
+    <div class="container">
         <a href="/pdfC/Programming Basics - October 2022 - Certificate.pdf" download>
             <img src="/picC/Screenshot 2024-10-10 190641.png" class="certificate" alt="Certificate 1.2">
         </a>
@@ -51,6 +56,9 @@
     <div class="container">
         <a href="/pdfC/Software Engineering and DevOps - September 2024 - Certificate.pdf" download>
             <img src="/picC/SoftwareEngineering.png" class="certificate" alt="Certificate 1.2">
+        </a>
+        <a href="/pdfC/Containers and Cloud - October 2024 - Certificate.pdf" download>
+            <img src="/picC/Containers and Cloud.png" class="certificate" alt="Certificate 1.2">
         </a>
     </div>
 </body>
