--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>My SoftUni Certificates.</h1>
     <div class="container">
         <a href="/pdfC/Diploma for Back-End Software Engineer with C#.pdf" download>
-            <img src="/picC/Back-end Software engineer with C#.png/" class="certificate" alt="Certificate 1.2">
+            <img src="/picC/Back-end Software engineer with C#.png" class="certificate" alt="Certificate 1.2">
         </a>
     </div>
     <div class="container">
